--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,11 +6,25 @@
       {
         "label": "Build Kernel Module",
         "type": "shell",
-        "command": "ssh",
-            "args": [
-                "dev@192.168.56.2",
-                "'source ~/Documents/petalinux_install/2022.1/settings.sh && cd ~/Documents/petalinux_projects/GPIO_Example_2/ && petalinux-build -c mymodule'"
-            ],
+        "command": ["scp '${workspaceFolder}\\build_files\\Makefile' dev@192.168.56.2:/home/dev/Documents/petalinux_projects/GPIO_Example_2/project-spec/meta-user/recipes-modules/mymodule/files;",
+          "scp '${workspaceFolder}\\src\\hello-1.c' dev@192.168.56.2:/home/dev/Documents/petalinux_projects/GPIO_Example_2/project-spec/meta-user/recipes-modules/mymodule/files;",
+          "scp '${workspaceFolder}\\build_files\\mymodule.bb' dev@192.168.56.2:/home/dev/Documents/petalinux_projects/GPIO_Example_2/project-spec/meta-user/recipes-modules/mymodule/;",
+          "ssh dev@192.168.56.2 'source ~/Documents/petalinux_install/2022.1/settings.sh && cd ~/Documents/petalinux_projects/GPIO_Example_2/ && petalinux-build -c mymodule';",
+          "scp dev@192.168.56.2:/home/dev/Documents/petalinux_projects/GPIO_Example_2/build/tmp/sysroots-components/zynq_generic/mymodule/lib/modules/5.15.19-xilinx-v2022.1/extra/hello-1.ko '${workspaceFolder}'"
+        ],
+        "group": {
+          "kind": "build",
+          "isDefault": true
+         },
+         "presentation": {
+           "panel": "new"
+         }
+       },
+       {
+        "label": "Move Kernel to board",
+        "type": "shell",
+        "command": ["",
+          "scp -r -B root '${workspaceFolder}\\hello-1.ko' zybo@192.168.69.10:~/"],
         "group": {
           "kind": "build",
           "isDefault": true
