Minor Bug Fixes

--- a/program.conf
+++ b/program.conf
@@ -4,5 +4,8 @@ MINOR_VERSION=0
 PATCH=0
 VERSION=${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH}
 
+
 BUILD_MACHINE_IP=192.168.56.2
 BUILD_MACHINE_USER=dev
+
+PROJECT_DIR=C:\Users\The Pigeon Lord 9000\Desktop\GPIO_Example_2
