--- a/build_files/Makefile
+++ b/build_files/Makefile
@@ -1,3 +1,8 @@
+
+KERNEL_SRC := /home/dev/Documents/petalinux_projects/GPIO_Example_2/build/tmp/work/zynq_generic-xilinx-linux-gnueabi/linux-xlnx/5.15.19+gitAUTOINC+b0c1be301e-r0/linux-zynq_generic-standard-build/ 
+CROSS_COMPILE := /home/dev/Documents/petalinux_projects/GPIO_Example_2/build/tmp/work/zynq_generic-xilinx-linux-gnueabi/linux-xlnx/5.15.19+gitAUTOINC+b0c1be301e-r0/recipe-sysroot-native/usr/bin/arm-xilinx-linux-gnueabi/arm-xilinx-linux-gnueabi-
+ARCH := arm
+
 obj-m := hello-1.o
 
 MY_CFLAGS += -g -DDEBUG
@@ -6,7 +11,7 @@ ccflags-y += ${MY_CFLAGS}
 SRC := $(shell pwd)
 
 all:
-	$(MAKE) -C $(KERNEL_SRC) M=$(SRC) V=1
+	$(MAKE) -C $(KERNEL_SRC) M=$(SRC) ARCH=$(ARCH) CROSS_COMPILE=$(CROSS_COMPILE) modules
 
 modules_install:
 	$(MAKE) -C $(KERNEL_SRC) M=$(SRC) modules_install
