Small makefile updates

--- a/build_files/Makefile
+++ b/build_files/Makefile
@@ -1,9 +1,9 @@
 
+obj-m := hello-1.o
+
 KERNEL_SRC := /home/dev/Documents/petalinux_projects/GPIO_Example_2/build/tmp/work/zynq_generic-xilinx-linux-gnueabi/linux-xlnx/5.15.19+gitAUTOINC+b0c1be301e-r0/linux-zynq_generic-standard-build/ 
 CROSS_COMPILE := /home/dev/Documents/petalinux_projects/GPIO_Example_2/build/tmp/work/zynq_generic-xilinx-linux-gnueabi/linux-xlnx/5.15.19+gitAUTOINC+b0c1be301e-r0/recipe-sysroot-native/usr/bin/arm-xilinx-linux-gnueabi/arm-xilinx-linux-gnueabi-
 ARCH := arm
-
-obj-m := hello-1.o
 
 MY_CFLAGS += -g -DDEBUG
 ccflags-y += ${MY_CFLAGS}
@@ -17,6 +17,6 @@ modules_install:
 	$(MAKE) -C $(KERNEL_SRC) M=$(SRC) modules_install
 
 clean:
-	rm -f *.o *~ core .depend .*.cmd *.ko *.mod.c
+	rm -f *.o *~ core .depend .*.cmd *.ko *.mod.c *.mod
 	rm -f Module.markers Module.symvers modules.order
 	rm -rf .tmp_versions Modules.symvers
