--- a/program.conf
+++ b/program.conf
@@ -1,11 +1,13 @@
 
-MAJOR_VERSION=1
-MINOR_VERSION=0
+MAJOR_VERSION=0
+MINOR_VERSION=1
 PATCH=0
 VERSION=${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH}
 
+PROJECT_DIR=C:\Users\The Pigeon Lord 9000\Desktop\GPIO_Example_2
 
 BUILD_MACHINE_IP=192.168.56.2
 BUILD_MACHINE_USER=dev
+BUILD_MACHINE_WORKING_DIR=/home/dev/Documents/petalinux_projects/GPIO_Example_2/module-working
 
-PROJECT_DIR=C:\Users\The Pigeon Lord 9000\Desktop\GPIO_Example_2
+
