--- a/release/Makefile
+++ b/release/Makefile
@@ -1,5 +1,5 @@
 
-obj-m := hello-1.o
+obj-m := GPIO_Example_2.o
 
 KERNEL_SRC := /home/dev/Documents/petalinux_projects/GPIO_Example_2/build/tmp/work/zynq_generic-xilinx-linux-gnueabi/linux-xlnx/5.15.19+gitAUTOINC+b0c1be301e-r0/linux-zynq_generic-standard-build/ 
 CROSS_COMPILE := /home/dev/Documents/petalinux_projects/GPIO_Example_2/build/tmp/work/zynq_generic-xilinx-linux-gnueabi/linux-xlnx/5.15.19+gitAUTOINC+b0c1be301e-r0/recipe-sysroot-native/usr/bin/arm-xilinx-linux-gnueabi/arm-xilinx-linux-gnueabi-
