Modified Build Process

--- a/program.conf
+++ b/program.conf
@@ -10,4 +10,5 @@ BUILD_MACHINE_IP=192.168.56.2
 BUILD_MACHINE_USER=dev
 BUILD_MACHINE_WORKING_DIR=/home/dev/Documents/petalinux_projects/GPIO_Example_2/module-working
 
+DRIVER_SRC_DIR=\src\device_driver
 
