--- a/utils/build_kernel_module.yaml
+++ b/utils/build_kernel_module.yaml
@@ -5,12 +5,16 @@ Commands:
   - command: scp
     args:
       - quote:
-        - {{ PROJECT_DIR }}{{ DRIVER_SRC_DIR }}\release\*
+        - {{ PROJECT_DIR }}{{ DRIVER_SRC_DIR }}{{ DIVIDER }}release{{ DIVIDER }}
+      - no-space:
+        - '*'
       - {{ BUILD_MACHINE_USER }}@{{ BUILD_MACHINE_IP }}:{{ BUILD_MACHINE_WORKING_DIR }}
   - command: scp
     args:
       - quote:
-        - {{ PROJECT_DIR }}{{ DRIVER_SRC_DIR }}\src\*
+        - {{ PROJECT_DIR }}{{ DRIVER_SRC_DIR }}{{ DIVIDER }}src{{ DIVIDER }}
+      - no-space:
+        - '*'
       - {{ BUILD_MACHINE_USER }}@{{ BUILD_MACHINE_IP }}:{{ BUILD_MACHINE_WORKING_DIR }}
   - command: ssh
     args:
